corrects spacing around nav items so they can be used in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -334,17 +334,18 @@ nav > ul > li > a:active {
   border-top: 2px solid #005792;
   border-bottom: 2px solid #005792;
   margin: 1em auto;
-  padding: 1.5em 0;
+  padding: 0;
   text-align: center;
   width: 100%;
 }
 
 .portfolio nav > ol > li {
   display: inline-block;
+  margin: 1em 0;
 }
 
 .portfolio nav > ol > li > a {
-  padding: 2em 16px;
+  padding: 1em 16px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   color: #005792;
